# k510_buildroot

./: .gitignore  Config.in  Makefile  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.pl.md  README.ru.md  README.zh-Hans.md  README.zh-Hant.md  external.desc  external.mk  release_notes.md
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  help.yml  other.yml
.github/workflows/: build.yml  dev_release.yml  release.yml
configs/: k510_crb_lp3_v0_1_defconfig  k510_crb_lp3_v1_2_defconfig  k510_evb_lp3_v1_1_defconfig
docs/: README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.pl.md  README.ru.md  README.zh-Hans.md  README.zh-Hant.md
package/: README.md
package/ai/: Config.in  ai.hash  ai.mk
package/ai/code/: CMakeLists.txt  build.sh  gc2093.conf  imx219_0.conf  imx219_1.conf  imx219_1080x1920_0.conf  imx385_2frame.conf  video_192x320.conf  video_object_detect_320.conf  video_object_detect_320x320.conf  video_object_detect_432x368.conf  video_object_detect_480x640.conf  video_object_detect_512.conf  video_object_detect_640.conf  video_object_detect_640x480.conf
package/ai/code/cmake/: Riscv64.cmake
package/ai/code/common/: buf_mgt.cc  buf_mgt.h  k510_drm.c  k510_drm.h  list.h  media_ctl.h  v4l2.c  v4l2.h
package/ai/code/drm/: k510_drm.c  k510_drm.h  media_ctl.h
package/ai/code/face_alignment/: CMakeLists.txt  README.md  constant.h  cv2_utils.cc  cv2_utils.h  depth_estimated.cc  depth_estimated.h  main.cc  pfld.cc  rasterize.cc  rasterize.h  tddfa.cc  tddfa.h
package/ai/code/face_detect/: CMakeLists.txt  README.md  main.cc
package/ai/code/face_expression/: CMakeLists.txt  README.md  anchors_640.cc  cv2_utils.h  face_expression.cc  face_expression.h  main.cc  retinaface.h
package/ai/code/face_landmarks/: CMakeLists.txt  README.md  cv2_utils.cc  cv2_utils.h  main.cc  pfld.h  retinaface.h
package/ai/code/face_recog/: CMakeLists.txt  README.md  cv2_utils.h  hal_comm.h  hal_key.c  hal_key.h  insightface.cc  insightface.h  key.cc  key.h  main.cc  retinaface.cc
package/ai/code/hand_image_classify/: CMakeLists.txt  README.md  connect.cc  cv2_utils.cc  cv2_utils.h  hld.cc  hld.h  hls_hand.cc  imagenet.cc  imagenet.h  main.cc  yolo.cc  yolo.h
package/ai/code/head_pose_estimation/: CMakeLists.txt  README.md  cv2_utils.cc  cv2_utils.h  hpe.cc  hpe.h  main.cc
package/ai/code/license_plate_recog/: CMakeLists.txt  README.md  cv2_utils.cc  cv2_utils.h  lprnet.cc  lprnet.h  main.cc  retinalpd.cc  retinalpd.h
package/ai/code/object_detect/: CMakeLists.txt  README.md  cv2_utils.cc  cv2_utils.h  main.cc  object_detect.cc  object_detect.h
package/ai/code/object_detect_demo/: CMakeLists.txt  cv2_utils.cc  cv2_utils.h  main.cc  object_detect.cc  object_detect.h
package/ai/code/object_detect_opencv/: CMakeLists.txt  main.cc  media_ctl.h  object_detect.cc  object_detect.h
package/ai/code/object_detect_opencv/data/: bf16.sh  imx219_1.conf  od_onnx.py  uint8.sh  video.conf
package/ai/code/object_detect_v4l2/: CMakeLists.txt  README.md  cv2_utils.cc  main.cc  object_detect.cc  object_detect.h
package/ai/code/object_detect_v4l2/data/: bf16.sh  uint8.sh  video.conf
package/ai/code/openpose/: CMakeLists.txt  README.md  cv2_utils.cc  cv2_utils.h  main.cc  openpose.cc  openpose.h  pafprocess.cc  pafprocess.h
package/ai/code/person_detect/: CMakeLists.txt  README.md  anchors_0.cc  anchors_1.cc  anchors_2.cc  anchors_3.cc  anchors_4.cc  cv2_utils.cc  cv2_utils.h  main.cc  media_ctl.h  scrpd.cc  scrpd.h
package/ai/code/retinaface_mb_320/: CMakeLists.txt  cv2_utils.h  main.cc  retinaface.cc  rf_onnx.py
package/ai/code/retinaface_mb_320_opencv/: CMakeLists.txt  README.md  main.cc  retinaface.cc  retinaface.h
package/ai/code/retinaface_mb_320_opencv/data/: bf16.sh  rf_onnx.py  uint8.sh
package/ai/code/retinaface_mb_320_v4l2/: CMakeLists.txt  cv2_utils.cc  main.cc  retinaface.cc  retinaface.h
package/ai/code/retinaface_mb_320_v4l2/data/: bf16.sh  uint8.sh  video.conf
package/ai/code/self_learning/: CMakeLists.txt  README.md  cv2_utils.h  gerecorg.cc  gerecorg.h  key.cc  key.h  main.cc
package/ai/code/shell/: face_alignment.sh  face_detect.sh  face_expression.sh  face_landmarks.sh  face_recog.sh  hand_image_classify.sh  head_pose_estimation.sh  license_recog.sh  object_detect.sh  object_detect_demo_bf16.sh  object_detect_demo_uint8.sh  object_detect_opencv_bf16.sh  object_detect_opencv_uint8.sh  object_detect_v4l2_bf16.sh  object_detect_v4l2_uint8.sh  open_pose.sh  person_detect.sh  retinaface_mb_320_bf16.sh  retinaface_mb_320_opencv_bf16.sh  retinaface_mb_320_opencv_uint8.sh  retinaface_mb_320_uint8.sh  retinaface_mb_320_v4l2_bf16.sh  retinaface_mb_320_v4l2_uint8.sh  self_learning.sh  simple_pose.sh
package/ai/code/simple_pose/: CMakeLists.txt  README.md  cv2_utils.cc  cv2_utils.h  main.cc  object_detect.cc  object_detect.h  simple_pose.cc  simple_pose.h
package/alsa_demo/: Config.in  alsa_demo.mk
package/audio3a_lib/: Config.in  audio3a_lib.mk
package/aws_iot_test/: Config.in  aws_iot_test.mk
package/client/: Config.in  client.mk
package/crypto/: Config.in  crypto.mk
package/drm_demo/: Config.in  src.mk
package/dsp_app_new/: Config.in  dsp_app_new.mk
package/dsp_log/: Config.in  dsp_log.mk
package/dsp_scheduler/: Config.in  dsp_scheduler.mk
package/encode_app/: Config.in  encode_app.mk
package/ffmpeg_canaan/: 0001-buildroot-ffmpeg-0.1.patch  0002-buildroot-ffmpeg.patch  0003-buildroot-ffmpeg.patch  0004-buildroot-ffmpeg.patch  0005-buildroot-ffmpeg.patch  0006-buildroot-ffmpeg.patch  Config.in  (+30 more)
patches/: 0001-buildroot-busybox-mdev.conf-sd-auto-mount.patch  0001-buildroot-change-python-cython-version-to-0-29.21.patch  0001-buildroot-change-python-numpy-version-to-1.19.5.patch  0001-buildroot-fix-external-toolchain-install-issue-with-andes-323-toolchian.patch  0001-buildroot-libopenssl.patch  0002-dhcp-exit-do-not-clean-dns.patch
(+827 files in other folders)
